--- a/type.vcxproj.filters
+++ b/type.vcxproj.filters
@@ -29,5 +29,13 @@
     <ClInclude Include="src\win_funcs\win_func.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="type.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
