--- a/type.vcxproj
+++ b/type.vcxproj
@@ -175,9 +175,15 @@
     <ClCompile Include="src\win_funcs\win_func.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="resource.h" />
     <ClInclude Include="src\typedef.h" />
-    <ClInclude Include="src\win_funcs\menu_ids.h" />
     <ClInclude Include="src\win_funcs\win_func.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="type.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="customme.bin" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
