--- a/type.vcxproj.filters
+++ b/type.vcxproj.filters
@@ -29,8 +29,18 @@
     <ClInclude Include="src\win_funcs\win_func.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\win_funcs\menu_ids.h">
+    <ClInclude Include="resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="type.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="customme.bin">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
