--- a/CGUI.vcxproj
+++ b/CGUI.vcxproj
@@ -172,18 +172,19 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\source.cpp" />
-    <ClCompile Include="src\wnd_funcs\wnd_drag.cpp" />
-    <ClCompile Include="src\wnd_funcs\wnd_resize.cpp" />
-    <ClCompile Include="src\wnd_funcs\wnd_title.cpp" />
-    <ClCompile Include="src\wnd_funcs\wnd_func.cpp" />
+    <ClCompile Include="src\wnd\funcs\wnd_drag.cpp" />
+    <ClCompile Include="src\wnd\funcs\wnd_resize.cpp" />
+    <ClCompile Include="src\wnd\funcs\wnd_title.cpp" />
+    <ClCompile Include="src\wnd\wnd_func.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\typedef.h" />
-    <ClInclude Include="src\wnd_funcs\wincludes.h" />
-    <ClInclude Include="src\wnd_funcs\wnd_drag.h" />
-    <ClInclude Include="src\wnd_funcs\wnd_func.h" />
-    <ClInclude Include="src\wnd_funcs\wnd_resize.h" />
-    <ClInclude Include="src\wnd_funcs\wnd_title.h" />
+    <ClInclude Include="src\wnd\funcs\wnd_includes.h" />
+    <ClInclude Include="src\wnd\wincludes.h" />
+    <ClInclude Include="src\wnd\funcs\wnd_drag.h" />
+    <ClInclude Include="src\wnd\wnd_func.h" />
+    <ClInclude Include="src\wnd\funcs\wnd_resize.h" />
+    <ClInclude Include="src\wnd\funcs\wnd_title.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="customme.bin" />
