--- a/CGUI.vcxproj.filters
+++ b/CGUI.vcxproj.filters
@@ -18,16 +18,16 @@
     <ClCompile Include="src\source.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\wnd_funcs\wnd_func.cpp">
+    <ClCompile Include="src\wnd\wnd_func.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\wnd_funcs\wnd_title.cpp">
+    <ClCompile Include="src\wnd\funcs\wnd_title.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\wnd_funcs\wnd_drag.cpp">
+    <ClCompile Include="src\wnd\funcs\wnd_drag.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\wnd_funcs\wnd_resize.cpp">
+    <ClCompile Include="src\wnd\funcs\wnd_resize.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -35,19 +35,22 @@
     <ClInclude Include="src\typedef.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\wnd_funcs\wnd_func.h">
+    <ClInclude Include="src\wnd\wnd_func.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\wnd_funcs\wnd_title.h">
+    <ClInclude Include="src\wnd\funcs\wnd_title.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\wnd_funcs\wincludes.h">
+    <ClInclude Include="src\wnd\wincludes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\wnd_funcs\wnd_drag.h">
+    <ClInclude Include="src\wnd\funcs\wnd_drag.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\wnd_funcs\wnd_resize.h">
+    <ClInclude Include="src\wnd\funcs\wnd_resize.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\wnd\funcs\wnd_includes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
